Eliminated unneeded source code dependencies of CBuffer, CBENode and CXML* classes to simplify its use in another projects. Removed "BitTorrent.TorrentExtraKeys" option since its always "true".
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8625 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -389,11 +389,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="BENode.cpp"
+				RelativePath="..\shareaza\BENode.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Buffer.cpp"
+				RelativePath="..\shareaza\Buffer.cpp"
 				>
 			</File>
 			<File
@@ -487,11 +487,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="BENode.h"
+				RelativePath="..\shareaza\BENode.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Buffer.h"
+				RelativePath="..\shareaza\Buffer.h"
 				>
 			</File>
 			<File
