Fixed not fit long lines in Select dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8629 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1893,7 +1893,7 @@ FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     LTEXT           "Please select:",IDC_STATIC,7,7,243,10
     PUSHBUTTON      "OK",IDOK,143,49,50,14
-    COMBOBOX        IDC_FILE_LIST,7,22,243,150,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_FILE_LIST,7,22,243,150,CBS_DISABLENOSCROLL | CBS_AUTOHSCROLL | CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Cancel",IDCANCEL,200,49,50,14
 END
 
