--- a/plugins/GFLLibraryBuilder/GFLLibraryBuilder_9.vcproj
+++ b/plugins/GFLLibraryBuilder/GFLLibraryBuilder_9.vcproj
@@ -262,8 +262,8 @@
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
-				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="false"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
