--- a/plugins/MediaImageServices/MediaImageServices_9.vcproj
+++ b/plugins/MediaImageServices/MediaImageServices_9.vcproj
@@ -247,6 +247,7 @@
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
