--- a/plugins/RazaWebHook/RazaWebHook64_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook64_9.vcproj
@@ -332,8 +332,10 @@
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(IntDir)"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
+				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
