--- a/plugins/SearchExport/SearchExport.vcproj
+++ b/plugins/SearchExport/SearchExport.vcproj
@@ -238,8 +238,10 @@
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="..\..\shareaza"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
+				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
