--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:78CF|shareaza.exe:43D4|shareaza.exe:41F5|shareaza.exe:7C4D|shareaza.exe:48E3|shareaza.exe:4783|shareaza.exe:7b65|shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
+ignore=zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -66,72 +66,6 @@ output=C:\Projects\Shareaza\crashes\fixed\CBuffer EnsureBuffer\{VER_NUMBER}\{TIM
 if={VER_NUMBER} {ADDRESS} {MODULE}
 is=2.5.2.0 0c58 shareaza.exe
 output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile Open\{VER_NUMBER}\{TIMESTAMP}
-
-; ------------------------------------------------------------------------
-; Fixed 2.5.1.0
-
-[RenderFile]
-if={VER_NUMBER} {ADDRESS} {MODULE}
-is=2.5.1.0 1485 mediaplayer.dll
-output=C:\Projects\Shareaza\crashes\fixed\RenderFile\{VER_NUMBER}\{TIMESTAMP}
-
-[CDownloadTransferHTTP::OnDropped]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 545e
-output=C:\Projects\Shareaza\crashes\fixed\CDownloadTransferHTTP OnDropped\{VER_NUMBER}\{TIMESTAMP}
-
-[CLibraryWnd::OnCollection]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 b1ac
-output=C:\Projects\Shareaza\crashes\fixed\CLibraryWnd OnCollection\{VER_NUMBER}\{TIMESTAMP}
-
-[CMatchFile::GetFilteredCount]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6BC9
-output=C:\Projects\Shareaza\crashes\fixed\CMatchFile GetFilteredCount\{VER_NUMBER}\{TIMESTAMP}
-
-[CFragmentedFile::VirtualRead]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 044C|2.5.1.0 716b|2.5.1.0 6f6b
-output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile VirtualRead\{VER_NUMBER}\{TIMESTAMP}
-
-[CFragmentBar::DrawFragment]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 06ED|2.5.2.0 0f2c
-output=C:\Projects\Shareaza\crashes\fixed\CFragmentBar DrawFragment\{VER_NUMBER}\{TIMESTAMP}
-
-[CLibraryBuilderInternals::CopyID3v2Field]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 4497
-output=C:\Projects\Shareaza\crashes\fixed\CLibraryBuilderInternals CopyID3v2Field\{VER_NUMBER}\{TIMESTAMP}
-
-[CBTClient::OnExtended]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 80E2
-output=C:\Projects\Shareaza\crashes\fixed\CBTClient OnExtended\{VER_NUMBER}\{TIMESTAMP}
-
-[CPongCache::Add]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 20c0
-output=C:\Projects\Shareaza\crashes\fixed\CPongCache Add\{VER_NUMBER}\{TIMESTAMP}
-
-[CFileExecutor::IsSafeExecute]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 0D6B
-output=C:\Projects\Shareaza\crashes\fixed\CFileExecutor IsSafeExecute\{VER_NUMBER}\{TIMESTAMP}
-
-[CAlbumFolder::OrganiseFile]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 D1A6
-output=C:\Projects\Shareaza\crashes\fixed\CAlbumFolder OrganiseFile\{VER_NUMBER}\{TIMESTAMP}
-
-; ------------------------------------------------------------------------
-; Fixed 2.5.0.0
-
-[CLibraryTipCtrl::OnPrepare]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.0.0 d5a4
-output=C:\Projects\Shareaza\crashes\fixed\CLibraryTipCtrl OnPrepare\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Other software
@@ -366,96 +300,6 @@ output=C:\Projects\Shareaza\crashes\known\SSE\{CPU}\{TIMESTAMP}
 if={WHAT}
 is=ILLEGAL_INSTRUCTION
 output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
-
-[recv]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 2785|2.5.1.0 B87C|2.5.1.0 90BA|2.5.1.0 96ba|2.5.1.0 2785
-output=C:\Projects\Shareaza\crashes\known\recv\{VER_NUMBER}\{TIMESTAMP}
-
-[CLibraryFile::IsShared]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 3a27
-output=C:\Projects\Shareaza\crashes\known\library\CLibraryFile IsShared\{VER_NUMBER}\{TIMESTAMP}
-
-[CSearchManager::Find]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6bd7|2.5.1.0 6B66
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager Find\{VER_NUMBER}\{TIMESTAMP}
-
-[CManagedSearch::ExecuteNeighbours]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 7E6B
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
-
-[CManagedSearch::Execute]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 D099|2.5.1.0 d0c7
-output=C:\Projects\Shareaza\crashes\known\search\CManagedSearch Execute\{VER_NUMBER}\{TIMESTAMP}
-
-[CQueryHit::CheckBogus]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 eef0
-output=C:\Projects\Shareaza\crashes\known\search\CQueryHit CheckBogus\{VER_NUMBER}\{TIMESTAMP}
-
-[CSearchManager::OnRun]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 d963
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager OnRun\{VER_NUMBER}\{TIMESTAMP}
-
-[CSearchManager::~CSearchManager]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 1BFF
-output=C:\Projects\Shareaza\crashes\known\search\CSearchManager ~CSearchManager\{VER_NUMBER}\{TIMESTAMP}
-
-[CQuerySearch::BuildWordList]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 98F2
-output=C:\Projects\Shareaza\crashes\known\search\CQuerySearch BuildWordList\{VER_NUMBER}\{TIMESTAMP}
-
-[CDockContext::StartDrag]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 EEFE|2.5.1.0 2E13|2.5.1.0 2E13|2.5.1.0 6105
-output=C:\Projects\Shareaza\crashes\known\CDockContext StartDrag\{VER_NUMBER}\{TIMESTAMP}
-
-[CLibraryBuilderInternals::ReadPDF]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6164|2.5.1.0 60B3|2.5.1.0 fd4f
-output=C:\Projects\Shareaza\crashes\known\ReadPDF\{VER_NUMBER}\{TIMESTAMP}
-
-[CSkin::TrackPopupMenu]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 953A
-output=C:\Projects\Shareaza\crashes\known\CSkin TrackPopupMenu\{VER_NUMBER}\{TIMESTAMP}
-
-[CDownloadTransferED2K::SelectFragment]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 6C6B
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferED2K SelectFragment\{VER_NUMBER}\{TIMESTAMP}
-
-[CDownloadTransferBT::SelectFragment]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 8B43
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SelectFragment\{VER_NUMBER}\{TIMESTAMP}
-
-[CDownloadTransferBT::SendRequests]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 91F9
-output=C:\Projects\Shareaza\crashes\known\CDownloadTransferBT SendRequests\{VER_NUMBER}\{TIMESTAMP}
-
-[CDownloadWithFile::GetEmptyFragmentList]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 0048
-output=C:\Projects\Shareaza\crashes\known\CDownloadWithFile GetEmptyFragmentList\{VER_NUMBER}\{TIMESTAMP}
-
-[CHomeDownloadsBox::Update]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 26eb
-output=C:\Projects\Shareaza\crashes\known\CHomeDownloadsBox Update\{VER_NUMBER}\{TIMESTAMP}
-
-[CSchema::CheckURI]
-if={VER_NUMBER} {ADDRESS}
-is=2.5.1.0 116e
-output=C:\Projects\Shareaza\crashes\known\CSchema CheckURI\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Bad reports
