--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4660,6 +4660,7 @@ BEGIN
     IDC_MEDIA_SPEED         "Adjust the speed of the media file.\nSpeed"
     IDC_MEDIA_VOLUME        "Adjust the audio volume.\nVolume"
 	IDS_COMMANDLINE         "Command-line options:\n\n-tray : Disable startup splash screen and send application to tray\n-nosplash : Disable startup splash screen\n-nowarn : Disable alpha (daily builds) version warning dialog\n\nInterface modes:\n\n-basic : Start application in Basic interface mode\n-tabbed : Start application in Tabbed interface mode\n-windowed : Start application in Windowed interface mode\n\nSystem options:\n\n-RegServer : Register internal components for everyone\n-UnRegServer : Un-register internal components for everyone\n-RegServerPerUser : Register internal components for current user\n-UnRegServerPerUser : Un-register internal components for current user"
+	IDS_SCHEMA_LOAD_ERROR   "Failed to load metadata schemas. Please reinstall application."
 END
 
 STRINGTABLE 
