--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
+ignore=ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -33,6 +33,50 @@ ignore=zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32
 ; is=				- ... this substring in it, caseinsensitive, use "|" as delimiter
 ; output			- Output path (with keywords)
 
+; ------------------------------------------------------------------------
+; Fixed 2.5.3.0
+
+[CMediaFrame::UpdateState 1]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 ecec shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CMediaFrame-UpdateState\{VER_NUMBER}\{TIMESTAMP}
+
+[CMediaFrame::UpdateState 2]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 ec4d shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CMediaFrame-UpdateState\{VER_NUMBER}\{TIMESTAMP}
+
+[IDS_DOWNLOAD_BAD_PUSH]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 4edf shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\Translation\{VER_NUMBER}\{TIMESTAMP}
+
+[m_pAlbumRoot->Serialize]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 1fbc shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\m_pAlbumRoot_Serialize\{VER_NUMBER}\{TIMESTAMP}
+
+; ------------------------------------------------------------------------
+
+[CMainWnd::ShowTrayPopup]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 a2b3 shareaza.exe
+output=C:\Projects\Shareaza\crashes\known\CMainWnd-ShowTrayPopup\{VER_NUMBER}\{TIMESTAMP}
+
+[CSettings::SmartVolume]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 71fc shareaza.exe
+output=C:\Projects\Shareaza\crashes\known\CSettings_SmartVolume\{VER_NUMBER}\{TIMESTAMP}
+
+[CSkin::TrackPopupMenu]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 989f shareaza.exe
+output=C:\Projects\Shareaza\crashes\known\CSkin_TrackPopupMenu\{VER_NUMBER}\{TIMESTAMP}
+
+[CDatagrams::Send]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.3.0 d767 shareaza.exe
+output=C:\Projects\Shareaza\crashes\known\CDatagrams_Send\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Fixed 2.5.2.0
